// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components > Random renders different store states when isLoading === false && hasError === false && isFulfilled === false 1`] = `
<DocumentFragment>
  <div
    class="sc-gtssRu evpqoY"
  >
    <h1
      class="sc-dlnjPT bgFMnT"
    >
      Random Number
    </h1>
    <button
      class="sc-bdnylx lolljv"
      type="button"
    >
      Get random number
    </button>
    <div>
      Click the button to get random number
    </div>
  </div>
</DocumentFragment>
`;

exports[`components > Random renders different store states when isLoading === false && hasError === false && isFulfilled === true 1`] = `
<DocumentFragment>
  <div
    class="sc-gtssRu evpqoY"
  >
    <h1
      class="sc-dlnjPT bgFMnT"
    >
      Random Number
    </h1>
    <button
      class="sc-bdnylx lolljv"
      type="button"
    >
      Get random number
    </button>
    <div>
      Retrieved: 
      <tt>
        1
      </tt>
    </div>
  </div>
</DocumentFragment>
`;

exports[`components > Random renders different store states when isLoading === false && hasError === true && isFulfilled === false 1`] = `
<DocumentFragment>
  <div
    class="sc-gtssRu evpqoY"
  >
    <h1
      class="sc-dlnjPT bgFMnT"
    >
      Random Number
    </h1>
    <button
      class="sc-bdnylx lolljv"
      type="button"
    >
      Get random number
    </button>
    <div>
      Error: Could not retrieve a random number
    </div>
  </div>
</DocumentFragment>
`;

exports[`components > Random renders different store states when isLoading === true && hasError === false && isFulfilled === false 1`] = `
<DocumentFragment>
  <div
    class="sc-gtssRu evpqoY"
  >
    <h1
      class="sc-dlnjPT bgFMnT"
    >
      Random Number
    </h1>
    <button
      class="sc-bdnylx lolljv"
      disabled=""
      type="button"
    >
      Get random number
    </button>
    <div>
      Getting number
    </div>
  </div>
</DocumentFragment>
`;
